test/good/sets/set04.px

Float? x = 5
y = null
print {x, null, y, x!, x! + 1}.length
