test/bad/nullables/nullable05.px

a = {null: true}
Float? f = 0.5
b = {f: true}
a = b
